Fix countdown alignment within metal box

--- a/styles.css
+++ b/styles.css
@@ -395,12 +395,16 @@ section > p:not(.graph-source):not(.total-supply)::before {
     margin-right: auto;
     text-align: center;
     width: fit-content;
+    max-width: 100%;
+    box-sizing: border-box;
 }
 
 .time-wrapper {
     display: flex;
     justify-content: center;
     gap: 0.5rem;
+    flex-wrap: wrap;
+    width: 100%;
 }
 
 .launch-title {
@@ -580,6 +584,8 @@ section > p:not(.graph-source):not(.total-supply)::before {
         margin-left: auto;
         margin-right: auto;
         width: fit-content;
+        max-width: 100%;
+        box-sizing: border-box;
     }
 
     .time-segment {
